web/styles/popovers.css
/* ... */
.personal-menu-clear-status {
    display: flex;
    padding: 3px;
    align-items: center;
    margin-left: auto;
    color: hsl(0deg 0% 40%) !important;
    border-radius: 4px;
    opacity: 0.5;

    &:hover,
    &:focus {
        opacity: 0.9;
        text-decoration: none;
    }
}

.personal-menu-clear-status .personal-menu-clear-status-icon {
    top: 0;
}

.personal-menu-status-wrapper {
    display: flex;
    align-items: center;
    gap: 5px;
}

.personal-menu-status-text {
    color: var(--color-text-personal-menu-some-status);
}

.personal-menu-no-status-text {
    color: var(--color-text-personal-menu-no-status);
}

#gear-menu-dropdown {
    .org-info {
        padding: 9px 0 5px;

        & li {
            display: flex;
            justify-content: flex-start;
            font-size: 15px;
            font-style: normal;
            font-weight: 400;
            line-height: 16px; /* 114.286% */
            letter-spacing: 0.28px;

            &:focus-within {
                background: var(--color-background-hover-popover-menu);
            }

            .popover-menu-link {
                padding: 2px 10px;
                flex-grow: 1;
                text-decoration: none;

                &:hover {
                    background: var(--color-background-hover-popover-menu);
                    outline: none;
                }

                &:focus-visible {
                    border-radius: 4px;
                    /* Override the default focus style */
                    outline: 1px solid var(--color-outline-focus) !important;
                    outline-offset: -1px;
                }

                &:active {
                    background: var(--color-background-active-popover-menu);
                }
            }
        }

        .org-url {
            margin-bottom: 7px;
            padding: 0 10px;
        }

        .org-name,
        .org-plan .popover-menu-link {
            color: var(--color-text-popover-menu);
        }

        .org-name {
            font-size: 17px;
            font-weight: 600;
            line-height: 22px;
            padding: 0 10px;
        }

        .org-upgrade {
            font-size: 14px;
        }

        .org-upgrade,
        .org-url {
            color: var(--color-gear-menu-lighter-text);
        }

        .org-upgrade a,
        .org-version a {
            color: var(--color-gear-menu-blue-text);
        }
    }

    .gear-menu-select-light-theme,
    .gear-menu-select-dark-theme {
        display: none;
    }
}

ul.popover-menu-outer-list {
    list-style: none;
    margin: 0;

    li.popover-menu-outer-list-item {
        border-bottom: solid 1px var(--color-border-popover-menu-separator);

        &:last-child {
            border-bottom: none;
        }

        ul.popover-menu-inner-list {
            margin: 0;
            padding: 4px 0;
            list-style: none;
            background: none !important;
        }
    }
}

.spectator-view {
    #gear-menu-dropdown .gear-menu-select-dark-theme {
        display: block;
    }
}

.popover-menu-hotkey-hints {
    display: flex;
    gap: 4px;
    margin-left: auto;
    padding-left: 5px;

    > .popover-menu-hotkey-hint {
        box-sizing: border-box;
        color: var(--color-popover-hotkey-hint);
        text-align: center;
        font-size: 14px;
        font-style: normal;
        font-weight: 500;
        line-height: 14px;
        min-width: 1.25rem;
        padding: 2px 4px;
        border-radius: 3px;
        border: 1px solid var(--color-border-popover-hotkey-hint);
    }
}

#theme-switcher {
    margin: 0 10px;

    .tab-option-content:focus-visible {
        border-radius: 4px;
        /* Override the default focus style */
        outline: 1px solid var(--color-outline-focus) !important;
        outline-offset: -1px;
    }
}

