actions_popover: Fix content overflowing when the max-width is defined.
The simplebar core documentation, recommends to not style the element
initalising the simplebar at all and use an inner element instead.

Following the recommendation, we move the max-width property from the
popover tippy options, to the `.simplebar-content` element via the
`--popover-menu-max-width` custom property.

While doing so, we also simplify the max-width to `350px`, since the
responsiveness for smaller screen is already been taked care of in the
shared popover styling.

This prevents the issue where the content overflows and gets hidden
instead of wrapping, when the width of the popover reaches the set
max width (if any).

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -1481,3 +1481,7 @@ ul.popover-menu-outer-list {
         outline-offset: -1px;
     }
 }
+
+#message-actions-menu-dropdown {
+    --popover-menu-max-width: 350px;
+}
